# factor_lab

./: .gitignore  CHANGELOG.md  Knowledge Transfer factor_lab Project.md  Knowledge Transfer factor_lab Project_nlg.md  Knowledge_transfer011426.md  LICENSE  README.md  __init__.py  build_and_simulate.py  build_factor_model.py  build_factor_model_enhanced.py  conftest.py  debug_imports.py  demo.py  factor_lab_adapter.py  factor_lab_tui.py  pyproject.toml  refactor_samplers.py  setup.py  test_runner.py
docs/: API_REFERENCE.md  Factor Lab - Enhanced Spectral Analysis Engine.md  Make a Factor Model with these Parameters.md
examples/: __init__.py  backtest_strategy.py  extract_factors.py  generate_synthetic.py  lg_synthetic.py  optimize_portfolio.py  simulate_distributions.py
factor_lab/: .gitignore  __init__.py  cli.py  computation.py  decomposition.py  demo.py  inspect_npz.py  io.py  load_tests.py  model_many_observations.json  model_spec.json  optimization.py  perturbation_spec_jb.json  samplers.py  setup.py  simulation.py  types.py  verify_npz_output.py
factor_lab/docs/: CHEATSHEET.md  README.md
factor_lab/docs/older/: CHEATSHEET.md  PERTURBATION_STUDY.md  TECHNICAL_MANUAL.md
factor_lab/factor_lab/: decomposition.py  distributions.py  flexible_simulator.py  integration.py  model_builder.py  model_io.py  simulation.py  types.py
factor_lab/factor_lab/analyses/: __init__.py
factor_lab/factor_lab/visualization/: __init__.py
factor_lab/tests/analysis/: conftest.py  test_eigenvector_sign_normalization.py  test_integration.py  test_manifold.py  test_spectral_eigenvector.py
factor_lab_manifold_complete/: MANIFEST.in  PACKAGING_SUMMARY.md  build_and_simulate.py  model_spec.json  perturbation_iter.py  perturbation_spec.json  perturbation_spec_2_factor.json  perturbation_study.py  pyproject.toml
factor_lab_manifold_complete/docs/: API.md  DOCUMENTATION_SUMMARY.md
factor_lab_manifold_complete/docs/older/: API.md  APPENDIX_HIGH_DIMENSIONAL.md  NPZ_OUTPUT_FORMAT.md
factor_lab_manifold_complete/factor_lab/: __init__.py  decomposition.py  estimation.py  factor_types.py  simulation.py  types.py
factor_lab_manifold_complete/factor_lab/analyses/: builder.py  eigenvector.py  manifold.py  spectral.py
factor_lab_manifold_complete/factor_lab/analysis/: __init__.py  context.py  protocol.py
factor_lab_manifold_complete/factor_lab/visualization/: visualization.py
factor_lab_manifold_complete/tests/analysis/: test_extension.py  test_sign_normalization.py  test_visualization_context.py
tests/: conftest.py  test_advanced.py  test_computation.py  test_decomposition.py  test_decomposition_comprehensive.py  test_examples.py  test_integration.py  test_io.py  test_optimization.py  test_samplers.py  test_simulation.py  test_svd.py  test_types.py
